--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,8 @@ body {
 }
 
 .sidebar .profile img {
-  width: 80px;
+  width: 15vh;
+  
   border-radius: 50%;
   margin-bottom: 0.5rem;
 }
@@ -166,8 +167,8 @@ body {
 }
 
 .user-table td img.avatar {
-  width: 40px;
-  border-radius: 50%;
+  width: 15vh;
+  border-radius: 13px;
 }
 
 .user-table td button {
